<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:context=".HomeFragment"
        android:background="#FAF7F7"

        >


        <androidx.appcompat.widget.Toolbar

            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/linear"
            app:title="FitBuddy"
            android:textAlignment="textEnd"
            app:titleTextColor="@color/white"
            android:gravity="end"
            tools:ignore="InvalidId"
            />


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"

    >

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="18dp"
        android:orientation="vertical"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="18dp">

        <TextView
            android:id="@+id/textViewKahvaltıı"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Kahvaltı"/>
        <TextView
            android:id="@+id/textViewOglenYemegi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Öğle_Yemeği"/>
        <TextView
            android:id="@+id/textViewAkşamYemegii"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Akşam_Yemeği"/>
        <TextView
            android:id="@+id/textViewAtıstırmalıkk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Ara_Öğün"/>




















    </LinearLayout>



















</ScrollView>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>

