<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@drawable/linear"
                android:textAlignment="textEnd"
                app:layout_collapseMode="pin"
                app:title="FitBuddy"
                app:titleTextColor="@color/white" />


        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >
            <ImageView
                android:src="@drawable/kaloriii"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="90dp"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:id="@+id/textViewErrorMessage2"
                android:layout_width="match_parent"
                android:text="@string/blank"
                android:layout_height="wrap_content"/>

            <!-- mevcut kilo-->

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </TableLayout>

            <!-- mevcut kilo-->


            <!-- hedef-->
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textViewhedef"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:text="Hedef" />

                        <Spinner
                            android:id="@+id/spinnerhedef"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="40dp"
                            android:layout_marginTop="24dp"
                            android:entries="@array/hedef" />

                    </TableRow>
                </TableLayout>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                    <TextView
                        android:id="@+id/textViewHaftalikHedef"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/haftalık"/>

                    <Spinner
                        android:id="@+id/spinnerHaftalıkKg2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="24dp"
                        android:entries="@array/hedef_kg" />
                        <TextView
                            android:id="@+id/textViewHaftalikKg2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:text="@string/kg" />



                    </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="12dp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/blank" />

                    <Button
                        android:id="@+id/buttonEkle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/buton"
                        android:text="Bmr Hesapla"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/blank" />


                </TableRow>
                </TableLayout>

            <!-- haftalık hedef-->






        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</ScrollView>